# proto-plugins

./: .prototools  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  lefthook.yml  registry.json
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
tools/gitleaks/: Cargo.toml
tools/gitleaks/src/: lib.rs
tools/gitleaks/tests/: gitleaks_test.rs
tools/jq/: Cargo.toml
tools/jq/src/: lib.rs
tools/jq/tests/: jq_test.rs
tools/just/: Cargo.toml
tools/just/src/: lib.rs
tools/just/tests/: just_test.rs
tools/lefthook/: Cargo.toml
tools/lefthook/src/: lib.rs
tools/lefthook/tests/: lefthook_test.rs
tools/yq/: Cargo.toml
tools/yq/src/: lib.rs
tools/yq/tests/: yq_test.rs
